updates for individual cards components

--- a/src/app/cards/components/header/header.component.html
+++ b/src/app/cards/components/header/header.component.html
@@ -3,6 +3,7 @@
   <input
     class="new-card"
     placeholder="New Card Name"
+    autocomplete="off"
     autofocus
     [value]="cardName"
     (keyup)="changeNewCardName($event)"
