--- a/src/styles.css
+++ b/src/styles.css
@@ -280,12 +280,12 @@ body {
 	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-.todo-count {
+.card-count {
 	float: left;
 	text-align: left;
 }
 
-.todo-count strong {
+.card-count strong {
 	font-weight: 300;
 }
 
