setup page structure and nav beginings

--- a/src/app/modules/core/components/page/page.component.html
+++ b/src/app/modules/core/components/page/page.component.html
@@ -1,1 +1,4 @@
-<p>HELLO!!!</p>
+<app-page-header></app-page-header>
+<app-page-nav></app-page-nav>
+<app-page-main></app-page-main>
+<app-page-footer></app-page-footer>
