--- a/src/styles.css
+++ b/src/styles.css
@@ -21,16 +21,13 @@ button {
 }
 
 body {
-	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 16px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
-	background: #f5f5f5;
-	color: #111111;
 	min-width: 230px;
 	max-width: 550px;
 	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-weight: 300;
 }
 
 :focus {
@@ -519,4 +516,19 @@ hr {
 	.learn-bar > .learn {
 		left: 8px;
 	}
+}
+
+nav > ul{
+  position: fixed;
+  left: 0px;
+  top: min(15%, 250px);
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(227, 227, 227);
+  list-style:none;
+}
+
+ul.nav-list > li{
+  border: 1px solid blue;
+  padding: 1rem 2rem;
 }
